--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="LGF" />
-    <link rel="apple-touch-icon" href="https://picsum.photos/seed/lgf/192/192" />
+    <link rel="icon" type="image/jpeg" href="https://i.ibb.co/PZwVw9jN/images.jpg" />
+    <link rel="apple-touch-icon" href="https://i.ibb.co/PZwVw9jN/images.jpg" />
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
